fix button visual on Safari

--- a/src/components/sliders/Button.module.css
+++ b/src/components/sliders/Button.module.css
@@ -24,39 +24,19 @@
   }
 }
 
-.rectangle {
-  rx: 8;
-  ry: 8;
+.button-rectangle {
+  cursor: pointer;
   stroke-width: 2;
   stroke: rgb(255, 165, 0);
   fill: rgba(255, 255, 255, 0);
-  cursor: pointer;
 
   &.waiting {
     cursor: default;
   }
 
   &.disabled {
+    cursor: default;
     stroke: rgb(166, 139, 89);
     fill: rgba(156, 136, 99, 0.5);
-    cursor: default;
-  }
-
-  &.DecrementDoPosition,
-  &.IncrementDoPosition,
-  &.DecrementKeyDegree,
-  &.IncrementKeyDegree {
-    x: -23;
-    y: -20;
-    width: 46px;
-    height: 40px;
-  }
-
-  &.DecrementBoth,
-  &.IncrementBoth {
-    x: -50;
-    y: -20;
-    width: 100px;
-    height: 40px;
   }
 }
